exported functions from ChatManager to CommandManager, EmoticonManager etc
exported CUI Commands functions to CommandManager
exported EmotIcon function to EmoticonManager